--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LMT",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "License Management Tool",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "jquery": "^3.2.1",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
+    "mongodb": "^2.2.31",
     "mongoose": "^4.11.7",
     "nunjucks": "^3.0.1",
     "passport": "^0.4.0",
