--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LMT",
-  "version": "0.0.9",
+  "version": "0.0.10",
   "description": "License Management Tool",
   "main": "index.js",
   "scripts": {
@@ -28,6 +28,7 @@
     "express": "^4.15.4",
     "flatpickr": "^3.0.7",
     "jquery": "^3.2.1",
+    "jquery.cookie": "^1.4.1",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
     "mongodb": "^2.2.31",
