--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LMT",
-  "version": "0.0.22",
+  "version": "0.0.23",
   "description": "License Management Tool",
   "main": "index.js",
   "scripts": {
@@ -32,6 +32,7 @@
     "jquery.cookie": "^1.4.1",
     "jsonwebtoken": "^7.4.3",
     "lodash": "^4.17.4",
+    "migrate": "^0.2.4",
     "mongodb": "^2.2.31",
     "mongoose": "^4.12.0",
     "nunjucks": "^3.0.1",
