--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "LMT",
-  "version": "0.0.23",
+  "version": "0.0.24",
   "description": "License Management Tool",
   "main": "index.js",
   "scripts": {
@@ -38,6 +38,7 @@
     "nunjucks": "^3.0.1",
     "passport": "^0.4.0",
     "passport-jwt": "^3.0.0",
+    "query-to-mongo": "^0.7.0",
     "socket.io": "^2.0.3"
   }
 }
